# AI-Voice-Agent-for-Healthcare

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agent/: barge_in.py  pipeline.py  worker.py
backend/controllers/: booking_controller.py  conversation_controller.py  patient_controller.py  session_controller.py
backend/helpers/: consent_helper.py  fhir_helper.py  insurance_helper.py  talkehr_helper.py
backend/mocks/: fhir_mock.py  insurance_mock.py  talkehr_mock.py
backend/models/: appointment.py  fsm_state.py  insurance.py  patient.py  session_log.py
backend/orchestrator/: fsm.py  llm_client.py  session_memory.py  states.py  tool_dispatcher.py
backend/routes/: health.py  sessions.py  webhooks.py
backend/tests/: test_agent_pipeline.py  test_api_layer.py  test_e2e_call_flow.py  test_fsm.py  test_mocks.py  test_models.py  test_tool_dispatcher.py
frontend/: .env.local.example  .eslintrc.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(shell)/: layout.tsx
frontend/app/(shell)/dashboard/: page.tsx
frontend/app/(shell)/health/: page.tsx
frontend/app/(shell)/sessions/: page.tsx
frontend/app/(shell)/sessions/[id]/: page.tsx
frontend/app/call/: page.tsx
frontend/app/confirmation/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/health/: page.tsx
frontend/app/sessions/: page.tsx
frontend/app/sessions/[id]/: page.tsx
frontend/components/: CallCard.tsx  MetricWidget.tsx  StateBadge.tsx  TurnLog.tsx
frontend/hooks/: useHealth.ts  useLiveCall.ts  useSessionDetail.ts  useSessions.ts
frontend/services/: conversationService.ts  healthService.ts  sessionsService.ts
frontend/types/: appointment.ts  conversation.ts  health.ts  patient.ts  session.ts
