[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-voice-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "structlog>=24.1.0",
    "livekit>=0.17.0",
    "livekit-agents>=0.9.0",
    "anthropic>=0.28.0",
    "deepgram-sdk>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
