[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-voice-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # API layer
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Data validation & config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # HTTP client (external service helpers)
    "httpx>=0.27.0",
    # LLM — Groq (LLaMA 3.1 70B Versatile)
    "groq>=0.9.0",
    # STT — Deepgram
    "deepgram-sdk>=3.2.0",
    # LiveKit real-time voice
    "livekit>=0.17.0",
    "livekit-agents>=0.9.0",
    # Database — SQLAlchemy async (SQLite dev / PostgreSQL prod)
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",       # SQLite async driver (dev / MVP)
    "asyncpg>=0.29.0",         # PostgreSQL async driver (production)
    # Session store
    "redis[hiredis]>=5.0.0",
    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
